--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -2,4 +2,10 @@ title=CMJS Admin
 appTitle=CMJS Admin
 appDescription=Headless CMS Administration
 
+pageId=Seiten-ID
 pageType=Seitentyp
+
+logonTitle=Logon
+user=Benutzer
+password=Passwort
+login=login
