creating new pages

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,6 +3,7 @@ appTitle=CMJS Admin
 appDescription=Headless CMS Administration
 
 pageId=Seiten-ID
+legacyUrl=URL
 pageType=Seitentyp
 
 logonTitle=Logon
