--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -2,6 +2,7 @@ title=CMJS Admin
 appTitle=CMJS Admin
 appDescription=Headless CMS Administration
 
+page=Seite
 pageId=Seiten-ID
 legacyUrl=URL
 pageType=Seitentyp
