--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -2,10 +2,15 @@ title=CMJS Admin
 appTitle=CMJS Admin
 appDescription=Headless CMS Administration
 
+pages=Seiten
+pageType=Seitentyp
+pageTypes=Seiten-Typen
+media=Medien
+stettings=Einstellungen
+
 page=Seite
 pageId=Seiten-ID
 legacyUrl=URL
-pageType=Seitentyp
 
 logonTitle=Logon
 user=Benutzer
