--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,4 +1,3 @@
-title=CMJS Admin
 appTitle=CMJS Admin
 appDescription=Headless CMS Administration
 
@@ -10,6 +9,10 @@ stettings=Einstellungen
 
 page=Seite
 pageId=Seiten-ID
+title=Titel
+menuTitle=Menu Text
+showInMenu=in Menü anzeigen
+published=öffentlich
 legacyUrl=URL
 
 logonTitle=Logon
