--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -5,6 +5,7 @@ pages=Seiten
 pageType=Seitentyp
 pageTypes=Seiten-Typen
 media=Medien
+webSites=Web-Sites
 stettings=Einstellungen
 
 page=Seite
@@ -14,6 +15,11 @@ menuTitle=Menu Text
 showInMenu=in Menü anzeigen
 published=öffentlich
 legacyUrl=URL
+
+edit=Bearbeiten
+delete=Löschen
+save=Sichern
+cancel=Abbrechen
 
 logonTitle=Logon
 user=Benutzer
