--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -11,7 +11,7 @@ stettings=Einstellungen
 page=Seite
 pageId=Seiten-ID
 title=Titel
-menuTitle=Menu Text
+menuTitle=Menu Titel
 showInMenu=in Menü anzeigen
 published=öffentlich
 legacyUrl=URL
